Modified assignment for 2390

--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -19,7 +19,7 @@
     "## Problem 1.  \n",
     "* Load the Pitt_Cathedral.jpg file from the Data folder as a color image\n",
     "* Convert the image colors to display using the imshow() command \n",
-    "* Convert the image to Grayscale and display"
+    "* then Convert the image to Grayscale and display again"
    ]
   },
   {
@@ -46,7 +46,12 @@
    "metadata": {},
    "source": [
     "## Problem 4.\n",
-    "* Convert the original image of the Cathedral to HSV, Change the Hue, and display back as RBG"
+    "[ECE 1390]\n",
+    "* Write a function to preform a median filter operation using a moving 3 x 3 kernel.  The median filter should compute the median value from the 9 pixels in the kernel and replace the value at the center.    \n",
+    "\n",
+    "[ECE 2390]\n",
+    "* Write a function to preform a median filter operation using an arbitrary kernel (taken as a second argument).  The median filter should compute the median value from the pixels in the kernel and replace the value at the kernel anchor (center).    \n",
+    "\n"
    ]
   },
   {
@@ -54,7 +59,7 @@
    "metadata": {},
    "source": [
     "## Problem 5 [ECE 2690 students]\n",
-    "* Using the Haar wavelet, compress the color image by 50% and display "
+    "* Using the Haar wavelet, compress the color image by 25% removing only the high/high-pass component "
    ]
   }
  ],
